--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -66,7 +66,7 @@
 
     transform: scale(.75);
 
-    margin: 1rem 0;
+    margin: 1rem auto;
 
     transition: all .25s, max-height .5s;
 
@@ -75,7 +75,7 @@
 
         transform: scale(1);
 
-        margin: 2rem 0;
+        margin: 2rem auto;
     }
 
     * {
@@ -365,7 +365,7 @@
     }
 
     .header--logo {
-        margin: 0;
+        margin: 0 auto;
 
         transform: scale(.75);
 
