--- a/sass/_peter.scss
+++ b/sass/_peter.scss
@@ -94,7 +94,7 @@
             }
         }
 
-        background-color: rgba(#cccccc, 0.25);
+        background-color: rgba(black, 0);
     }
 
     .intro--menu-link {
@@ -117,6 +117,7 @@
 
     .services--more {
         margin-top: 5rem;
+        text-align: center;
     }
 
     #testimonial {
@@ -125,19 +126,23 @@
     }
 
     #membership {
-        padding-bottom: 5rem !important;
+        padding-top: 7.5rem !important;
+        padding-bottom: 10rem !important;
 
-        background-image: linear-gradient(rgba(black, 0)), url('./img/membership/background.jpg');
-        background-size: cover;
-        background-attachment: fixed;
+        // // background-image: linear-gradient(rgba(black, 0)), url('./img/membership/background.jpg');
+        // background-size: 200vh auto;
+        // background-attachment: fixed;
+        background-color: darken(white, 75);
         color: white;
 
         text-shadow: 0 1px 1px rgba(black, 0.5);
 
-        // .membership--item {
-        // }
+        .row {
+            margin-top: 2.5rem;
+        }
 
         @include breakpoint(md) {
+            background-size: cover;
             background-attachment: scroll;
         }
 
@@ -206,7 +211,7 @@
                     }
 
                     &.is-disabled {
-                        color: darken(white, 25);
+                        color: darken(white, 50);
                     }
                 }
             }
@@ -321,6 +326,10 @@
             letter-spacing: .2em;
             font-family: $font-sans;
         }
+    }
+
+    #footer {
+        padding-top: 0 !important;
     }
 
     .footer--outer::after {
