--- a/style.css
+++ b/style.css
@@ -981,7 +981,7 @@ input::placeholder {
   width: 30rem;
   -webkit-transform: scale(0.75);
           transform: scale(0.75);
-  margin: 1rem 0;
+  margin: 1rem auto;
   -webkit-transition: all .25s, max-height .5s;
   transition: all .25s, max-height .5s;
 }
@@ -992,7 +992,7 @@ input::placeholder {
         flex-shrink: 0;
     -webkit-transform: scale(1);
             transform: scale(1);
-    margin: 2rem 0;
+    margin: 2rem auto;
   }
 }
 
@@ -1331,7 +1331,7 @@ input::placeholder {
 }
 
 #header.is-scroll .header--logo {
-  margin: 0;
+  margin: 0 auto;
   -webkit-transform: scale(0.75);
           transform: scale(0.75);
 }
@@ -2468,7 +2468,7 @@ input::placeholder {
   width: 100%;
   height: 100%;
   color: white;
-  background-color: rgba(204, 204, 204, 0.25);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .peter .hero--carousel-content h1 {
@@ -2510,6 +2510,7 @@ input::placeholder {
 
 .peter .services--more {
   margin-top: 5rem;
+  text-align: center;
 }
 
 .peter #testimonial {
@@ -2518,17 +2519,20 @@ input::placeholder {
 }
 
 .peter #membership {
-  padding-bottom: 5rem !important;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0))), url("./img/membership/background.jpg");
-  background-image: linear-gradient(rgba(0, 0, 0, 0)), url("./img/membership/background.jpg");
-  background-size: cover;
-  background-attachment: fixed;
+  padding-top: 7.5rem !important;
+  padding-bottom: 10rem !important;
+  background-color: #404040;
   color: white;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5);
 }
 
+.peter #membership .row {
+  margin-top: 2.5rem;
+}
+
 @media (min-width: 992px) {
   .peter #membership {
+    background-size: cover;
     background-attachment: scroll;
   }
 }
@@ -2595,7 +2599,7 @@ input::placeholder {
 }
 
 .peter #membership .membership--item-info ul li.is-disabled {
-  color: #bfbfbf;
+  color: gray;
 }
 
 .peter #membership .membership--item-fee {
@@ -2699,6 +2703,10 @@ input::placeholder {
   font-weight: normal;
   letter-spacing: .2em;
   font-family: "Montserrat", sans-serif;
+}
+
+.peter #footer {
+  padding-top: 0 !important;
 }
 
 .peter .footer--outer::after {
